filters/sustainability_tech_deployment/v1/README.md
# Sustainability Pillar 1: Technology Works Filter

**Version**: 1.0
**Purpose**: Prove that climate solutions are deployed NOW and scaling, not theoretical future promises
**Pillar**: "Technology Actually Works (and is scaling)"
**Oracle Output**: Dimensional scores only (0-10 per dimension). Tier classification is computed post-processing from dimensional scores, not generated by the oracle.

## Overview

This filter evaluates climate technology articles to distinguish deployed, proven technology from vaporware, prototypes, and pure R&D announcements. It supports the narrative that climate solutions exist and are scaling globally.

### What Makes "Tech Works" Stories

**Tier 1 (8-10): Mass Deployment**
- ✅ Solar deployment hits 400 GW globally, costs fell 90% in 10 years
- ✅ EVs reach 90% market share in Norway, spreading to China/EU
- ✅ Offshore wind farms: Denmark's 600 MW generating 2.6 TWh/year
- ✅ Battery storage: 10 GWh deployed in California, stabilizing grid

**Tier 2 (6.5-7.9): Commercial Proven**
- ✅ Heat pump sales doubled YoY, now 20% of HVAC market in EU
- ✅ Green hydrogen: First commercial 10 MW electrolyzer operational
- ✅ Solid-state batteries: 100k units deployed in test fleets

**Filtered Out (<5.0): Vaporware**
- ❌ "Breakthrough announced: New solar tech achieves 45% efficiency in lab"
- ❌ "Company unveils prototype carbon capture device"
- ❌ "Startup plans to deploy fusion reactors by 2035"
- ❌ "Research shows potential for..." (no deployment)

## Eight Dimensions

### 1. Deployment Maturity (20% weight)

**What it measures**: Technology Readiness Level (TRL) - Where is this on the lab → mass deployment journey?

**Scoring guide**:
- **9-10 (Mass Deployment)**: GW-scale renewables, millions of EVs on road, global rollout
  - Example: "500 GW solar installed globally in 2024"
- **7-8 (Proven at Scale)**: Multi-site deployments, operational for years, reliable performance
  - Example: "50 offshore wind farms operational in Europe"
- **5-6 (First Commercial)**: Early commercial deployments, limited scale but revenue-generating
  - Example: "First commercial green hydrogen plant producing 10 tons/day"
- **3-4 (Pilot)**: Demonstration projects, test installations, not yet commercial
  - Example: "10 MW pilot carbon capture facility under construction"
- **1-2 (Lab/Concept)**: Research, prototypes, no working deployment
  - Example: "Lab achieves 50% solar efficiency" → Score 1-2, block from newsletter

**Gatekeeper**: If <5.0, overall score capped at 4.9 (cannot support "tech works" narrative with lab-stage tech)

---

### 2. Technology Performance (15% weight)

**What it measures**: Real-world performance vs promises. Lab conditions vs actual deployment data.

**Scoring guide**:
- **9-10 (Outperforms)**: Beats fossil alternatives, proven reliability, exceeds expectations
  - Example: "Wind farm capacity factor 48%, exceeding 40% design target"
- **7-8 (Meets Expectations)**: Real-world data matches projections, reliable operation
  - Example: "Heat pumps achieve COP 3.5 in winter conditions as designed"
- **5-6 (Real-world Validated)**: Some performance data, minor limitations acknowledged
  - Example: "EV range 250 miles vs 300 mile EPA rating"
- **3-4 (Lab Only)**: Performance claims based on ideal conditions
  - Example: "Battery achieves 1000 charge cycles (in controlled lab environment)"
- **1-2 (No Data)**: Claims without performance validation
  - Example: "Technology promises to reduce costs" (no actual data)

**High-performance indicators**:
- Capacity factor data (solar/wind)
- Round-trip efficiency (batteries, hydrogen)
- Uptime percentages (>95%)
- Real-world degradation rates

---

### 3. Cost Trajectory (15% weight)

**What it measures**: Is this technology getting cheaper? Path to fossil fuel competitiveness?

**Scoring guide**:
- **9-10 (Cheaper than Fossil)**: LCOE below coal/gas, costs fell >50% in 5 years
  - Example: "Solar LCOE now $20/MWh, cheaper than new coal at $60/MWh - IEA"
- **7-8 (Cost-Competitive)**: At parity with fossil fuels, no subsidies needed
  - Example: "Onshore wind LCOE matches natural gas in most US markets"
- **5-6 (Approaching Parity)**: Costs declining steadily, subsidies still needed
  - Example: "Green hydrogen costs fell 30% in 2 years, now $4/kg vs $2/kg fossil"
- **3-4 (Expensive)**: 2-5x fossil costs, slow cost decline
  - Example: "Technology costs $200/ton CO2 vs $50 for fossil alternative"
- **1-2 (No Path)**: No cost data, increasing costs, or >5x fossil
  - Example: "No pricing disclosed" or "Costs expected to decline eventually"

**Requirements**:
- LCOE or $/unit data
- Historical cost curve (not just current price)
- Comparison to fossil baseline

---

### 4. Scale of Deployment (15% weight)

**What it measures**: How much is actually deployed? MW, GW, units sold, installations.

**Context-aware scoring** (depends on entity type):

**For countries/utilities**:
- **9-10**: >10 GW deployed nationally
- **7-8**: 1-10 GW
- **5-6**: 100 MW - 1 GW
- **3-4**: 10-100 MW
- **1-2**: <10 MW

**For startups/companies**:
- **9-10**: >100k units deployed (EVs, heat pumps)
- **7-8**: 10k-100k units
- **5-6**: 1k-10k units (commercial traction)
- **3-4**: 100-1k units (pilot scale)
- **1-2**: <100 units (demo/prototype)

**Examples**:
- "China installed 100 GW solar in 2024" → 10 (country-level, massive)
- "Startup deployed 5,000 smart thermostats" → 6 (startup, early commercial)
- "Single office building installed solar panels" → 2 (negligible scale)

---

### 5. Market Penetration (15% weight)

**What it measures**: % of total market captured. Are people actually choosing this?

**Scoring guide**:
- **9-10**: >20% market share, mainstream or dominant
  - Example: "EVs hit 90% of new car sales in Norway"
- **7-8**: 10-20% market share, widespread adoption
  - Example: "Heat pumps now 15% of HVAC installations in EU"
- **5-6**: 5-10% market share, growing niche
  - Example: "Solar provides 8% of US electricity"
- **3-4**: 1-5% market share, early adopters only
  - Example: "Green hydrogen 2% of total hydrogen production"
- **1-2**: <1% market share, experimental
  - Example: "Fusion: 0% (not commercialized)"

---

### 6. Technology Readiness (10% weight)

**What it measures**: Are technical risks resolved? Is technology proven?

**Scoring guide**:
- **9-10 (Mature)**: Decades of deployment, well-understood, no barriers
  - Example: "Hydro power: 100+ years of proven operation"
- **7-8 (Proven)**: Multiple successful deployments, reliability demonstrated
  - Example: "Lithium-ion batteries: 15+ years mass production"
- **5-6 (Early Commercial)**: Working but some issues being resolved
  - Example: "Solid-state batteries: early production, degradation challenges remain"
- **3-4 (Pilot)**: Technical challenges being identified and addressed
  - Example: "Flow batteries: efficiency/cost issues in field testing"
- **1-2 (Experimental)**: Major technical hurdles, uncertain if solvable
  - Example: "Room-temperature superconductors: not reproducible"

---

### 7. Supply Chain Maturity (5% weight)

**What it measures**: Can we manufacture millions of these? Supply chain readiness?

**Scoring guide**:
- **9-10 (Global Supply Chain)**: Multiple manufacturers, mass production capacity, raw materials abundant
  - Example: "Solar panels: 500+ GW manufacturing capacity globally"
- **7-8 (Robust)**: Several suppliers, proven manufacturing processes
  - Example: "EV batteries: CATL, LG, Panasonic, BYD producing at scale"
- **5-6 (Growing)**: Some supply chain constraints, limited suppliers
  - Example: "Electrolyzers: 4-5 major manufacturers, capacity growing"
- **3-4 (Limited)**: Single/few suppliers, bottlenecks identified
  - Example: "Advanced wind turbines: Only 3 global suppliers"
- **1-2 (No Supply Chain)**: Reliant on single lab/supplier, custom fabrication
  - Example: "Prototype parts machined individually"

---

### 8. Proof of Impact (5% weight)

**What it measures**: Verified climate impact - tons CO2 avoided, MWh renewable generated

**Scoring guide**:
- **9-10 (Certified)**: Government-certified, multiple independent confirmations, transparent accounting
  - Example: "Wind farm avoided 900k tons CO2/year - EPA verified"
- **7-8 (Audited)**: Third-party audited, credible methodology
  - Example: "EV fleet emissions reduction verified by DNV GL"
- **5-6 (Credible Self-Report)**: Self-reported with transparent methodology
  - Example: "Company reports 50k tons CO2 avoided using GHG Protocol"
- **3-4 (Unverified)**: Self-reported without methodology
  - Example: "We estimate X tons CO2 savings"
- **1-2 (No Data)**: Claims without quantification
  - Example: "Contributes to emissions reduction" (no numbers)

**Gatekeeper**: If <4.0, overall score capped at 3.9 (must have some impact verification)

---

## Tier Classification (Post-Processing)

**Note**: These tiers are computed from dimensional scores by the post-filter at inference time. The oracle does NOT assign tiers - it only produces dimensional scores. This separation allows flexible tier threshold tuning without re-labeling data.

### Tier 1: Mass Deployment (8.0-10.0)

**Requirements**:
- Deployment Maturity ≥ 7.0 (proven at scale)
- Scale ≥ 7.0 (GW-scale or widespread)
- Market Penetration ≥ 5.0 (at least 5% market)

**Newsletter Use**: Lead stories - "Technology is scaling NOW"

**Examples**:
- "Solar deployment hits 500 GW globally, LCOE fell 90% - IEA confirms"
- "EVs reach 35% of China car sales, up from 5% in 2020"
- "Offshore wind: 50 GW operational in Europe, powering 25M homes"

---

### Tier 2: Commercial Proven (6.5-7.9)

**Requirements**:
- Deployment Maturity ≥ 5.0 (commercial deployments)
- Most dimensions ≥ 5.0

**Newsletter Use**: Supporting stories - "Technology works and is spreading"

**Examples**:
- "Heat pumps hit 20% of EU HVAC market, sales doubled YoY"
- "Green hydrogen plant operational: producing 10 tons/day for steel industry"
- "Grid-scale batteries deployed across California: 5 GWh capacity"

---

### Tier 3: Early Commercial (5.0-6.4)

**Requirements**:
- Deployment Maturity ≥ 5.0
- Limited scale or market penetration

**Newsletter Use**: Emerging tech - watch for scaling signals

**Examples**:
- "First commercial solid-state battery plant begins production: 100 MWh/year capacity"
- "Carbon capture facility captures 1,000 tons CO2/day - early operation"

---

### Tier 4: Pilot Stage (3.0-4.9)

**Filtered out** - Not yet commercially viable

**Examples**:
- "10 MW pilot geothermal project under construction"
- "Prototype wave energy device deployed for testing"

---

### Tier 5: Vaporware (0-2.9)

**Blocked** - Lab/concept stage, no deployment

**Examples**:
- "Breakthrough: Lab achieves 50% solar efficiency"
- "Startup unveils fusion reactor concept, aims for 2040 deployment"
- "Research shows potential for..." (no commercialization path)

---

## Example Scores

### Example 1: High Score (9.1)

**Article**: "China Solar Deployment Hits Record 200 GW in 2024, Costs Fall 20% - IEA Report"

```yaml
deployment_maturity: 10  # Mass deployment, operational
technology_performance: 9  # Proven reliability, capacity factors improving
cost_trajectory: 10  # Fell 90% over decade, now cheapest electricity
scale_of_deployment: 10  # 200 GW added in one year (country-level)
market_penetration: 8  # Now 18% of China's electricity
technology_readiness: 10  # Mature technology, no technical barriers
supply_chain_maturity: 10  # 500 GW global manufacturing capacity
proof_of_impact: 9  # Government-verified emissions avoided

Overall: 9.35 → Tier 1 (Mass Deployment)
Primary Pillar: Pillar 1 (Technology Works)
Newsletter: LEAD STORY
```

---

### Example 2: Medium Score (6.8)

**Article**: "Heat Pump Sales Double in EU, Reaching 20% of HVAC Market"

```yaml
deployment_maturity: 8  # Proven commercial technology, widespread
technology_performance: 8  # COP 3-4 proven in field
cost_trajectory: 7  # Approaching parity with gas furnaces
scale_of_deployment: 7  # Millions installed across EU
market_penetration: 7  # 20% market share, mainstream
technology_readiness: 9  # Mature technology, 50+ years history
supply_chain_maturity: 8  # Multiple manufacturers (Carrier, Daikin, etc.)
proof_of_impact: 6  # Some verification, credible estimates

Overall: 7.45 → Tier 2 (Commercial Proven)
Primary Pillar: Pillar 1 (Technology Works)
Newsletter: Supporting story
```

---

### Example 3: Low Score - Vaporware (2.1)

**Article**: "Startup Unveils Revolutionary Solar Panel with 60% Efficiency (Lab Results)"

```yaml
deployment_maturity: 1  # Lab only, no prototype or deployment
technology_performance: 3  # Lab conditions, not real-world
cost_trajectory: 2  # No cost data, not commercialized
scale_of_deployment: 1  # Zero deployed
market_penetration: 1  # 0% market (doesn't exist commercially)
technology_readiness: 2  # Experimental, unclear if scalable
supply_chain_maturity: 1  # No manufacturing capacity
proof_of_impact: 1  # Zero impact (not deployed)

Overall: 1.55 → Tier 5 (Vaporware)
Newsletter: BLOCK - pure vaporware
```

---

## Pre-Filter Logic

**Goal**: Block vaporware and lab-only tech before expensive LLM calls.

**Block if article contains**:
- "concept", "theoretical", "could potentially" (without deployment data)
- "prototype unveiled", "demo", "proof-of-concept"
- "laboratory results", "bench-scale", "research published" (without commercialization)
- "plans to deploy", "aiming for", "will build by 2030" (future-only, no current deployment)

**Pass if article contains**:
- "operational", "online", "generating", "producing"
- "deployed", "installed", "commissioned"
- Specific numbers: "X MW", "Y GW", "Z tons CO2", "N units sold"
- "market share", "YoY growth", "capacity factor"
- "cost declined", "LCOE", "price parity"

**Expected pass rate**: ~30-40% (most tech news is vaporware/prototypes)

---

## Training Data Requirements

**Target**: 3,000 labeled articles

**Diversity needed**:
- **Technologies**: Solar, wind, batteries, EVs, heat pumps, hydrogen, carbon capture, etc.
- **Stages**: Lab → Pilot → Early commercial → Mass deployment
- **Regions**: China, EU, US, developing world
- **Time periods**: Historical (2010s) vs recent (2020s) to capture cost declines

**Quality threshold**: 75% (need clear deployment data for accurate scoring)

---

## Use Cases

1. **Climate Tech Investor Deal Flow**
   - Find companies with deployed tech (Tier 1-2)
   - Avoid vaporware (Tier 4-5)
   - Track technology maturity and market traction

2. **"Technology Works" Newsletter**
   - Tier 1 stories: Lead with mass deployment wins
   - Tier 2 stories: Support with commercial traction
   - Combat doomerism with deployment data

3. **Technology Progress Tracking**
   - Time-series data: Is solar/wind actually scaling?
   - Cost curves: Are renewables getting cheaper?
   - Market penetration: Adoption rates by region

---

## Related Filters

This filter is **Pillar 1** of the 5-pillar sustainability framework:

1. **Technology Works** (this filter) - Deployment and scaling
2. **Economics Favor Action** (`sustainability_economic_viability`) - Cost competitiveness and job creation
3. **Policy Works** (`sustainability_policy_effectiveness`) - Policy blueprints and replicability
4. **Nature Recovers** (`sustainability_nature_recovery`) - Ecosystem health and pollution reduction
5. **Movement Growing** (`sustainability_movement_growth`) - Social momentum and behavior change

Articles can score high on multiple pillars. For example:
- "Norway EVs hit 90% market share" scores high on Pillar 1 (tech deployment), Pillar 2 (economics), and Pillar 3 (policy)

---

**Status**: Version 1.0 - Training data ready (4,146 labels, stratified splits prepared)

**Training Data**:
- Labeled dataset: `datasets/labeled/sustainability_tech_deployment/all_labels.jsonl` (4,146 articles)
- Training splits: `datasets/training/sustainability_tech_deployment/` (4,328 train / 413 val / 417 test)
- Model output format: Score arrays only (see `docs/decisions/2025-11-09-model-output-format.md`)
- Class imbalance mitigation: Stratified splits + 20% oversampling (see `docs/decisions/2025-11-09-class-imbalance-strategy.md`)

**Next Steps**: Train Qwen2.5-7B-Instruct on prepared data → Evaluate on validation set → Deploy for inference
